--- a/projeto/index.html
+++ b/projeto/index.html
@@ -13,8 +13,8 @@
   </head>
   <body>
     <main class="container">
-      <header class="header-site">
-        <div class="container-center header-site-container">
+      <header class="header-site-container">
+        <div class="container-center header-site-container-content">
           <span class="logo">FlexTurismos</span>
           <div class="menu">
             <nav class="menu-navigation">
@@ -33,8 +33,8 @@
           <div class="service-container-content-wrapper1">
             <h1 class="service-content-title">Flex Turismos</h1>
             <p class="service-content-subtitle">O melhor serviço para você!</p>
-            <div class="service-content-button">
-              <button>Saiba mais!</button>
+            <div class="know-more-button">
+              <button type="button">Saiba mais!</button>
             </div>
           </div>
           <div class="service-container-content-wrapper2">
@@ -42,6 +42,113 @@
           </div>
         </article>
       </section>
+
+      <section class="who-we-are-container">
+        <article class="container-center who-we-are-content">
+          <div class="who-we-are-content-wrapper1">
+            <img src="https://picsum.photos/626/417" alt="Imagem Principal" />
+          </div>
+          <div class="who-we-are-content-wrapper2">
+            <h2 class="who-we-are-content-title">Quem somos</h2>
+            <p class="who-we-are-content-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum at.</p>
+            <p class="who-we-are-content-text">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum at, quos necessitatibus vel rem dolores dicta? Earum, expedita eum
+              veniam alias assumenda asperiores placeat nisi.
+            </p>
+          </div>
+        </article>
+      </section>
+
+      <section class="services-container">
+        <article class="container-center services-container-content">
+          <h2 class="services-container-content-title">Serviços</h2>
+          <div class="services-container-content-wrapper1">
+            <div class="services-container-content-wrapper1-box">
+              <img src="https://picsum.photos/200/200" alt="Viagens" />
+              <span class="services-container-content-wrapper1-box-text">Pacotes de viagens</span>
+              <div class="button-buy-now">
+                <button type="button">Comprar agora</button>
+              </div>
+            </div>
+
+            <div class="services-container-content-wrapper1-box">
+              <img src="https://picsum.photos/200/200" alt="Viagens" />
+              <span class="services-container-content-wrapper1-box-text">Hospedagens</span>
+              <div class="button-buy-now">
+                <button type="button">Comprar agora</button>
+              </div>
+            </div>
+
+            <div class="services-container-content-wrapper1-box">
+              <img src="https://picsum.photos/200/200" alt="Viagens" />
+              <span class="services-container-content-wrapper1-box-text">Roteiros personalizados</span>
+              <div class="button-buy-now">
+                <button type="button">Comprar agora</button>
+              </div>
+            </div>
+          </div>
+        </article>
+      </section>
+
+      <section class="plans-container">
+        <article class="container-center plans-container-content">
+          <h2 class="plans-container-content-title">Planos</h2>
+          <div class="plans-container-content-wrapper1">
+            <div class="plans-container-content-wrapper1-box box-plan1">
+              <h3 class="plans-container-content-wrapper1-box-title">Plano 1</h3>
+              <ul class="plans-container-content-wrapper1-box-list">
+                <li class="plans-container-content-wrapper1-box-list-item">Suporte 24h</li>
+                <li class="plans-container-content-wrapper1-box-list-item">Serviços de quarto</li>
+                <li class="plans-container-content-wrapper1-box-list-item">Guia turístico</li>
+              </ul>
+              <div class="know-more-button">
+                <button type="button">Saiba mais!</button>
+              </div>
+            </div>
+
+            <div class="plans-container-content-wrapper1-box box-plan2">
+              <h3 class="plans-container-content-wrapper1-box-title">Plano 2</h3>
+              <ul class="plans-container-content-wrapper1-box-list">
+                <li class="plans-container-content-wrapper1-box-list-item">Suporte 24h</li>
+                <li class="plans-container-content-wrapper1-box-list-item">Serviços de quarto</li>
+                <li class="plans-container-content-wrapper1-box-list-item">Guia turístico</li>
+                <li class="plans-container-content-wrapper1-box-list-item">Roteiro de trilhas</li>
+                <li class="plans-container-content-wrapper1-box-list-item">Serviços personalizado</li>
+              </ul>
+              <div class="know-more-button">
+                <button type="button">Saiba mais!</button>
+              </div>
+            </div>
+
+            <div class="plans-container-content-wrapper1-box box-plan3">
+              <h3 class="plans-container-content-wrapper1-box-title">Plano 3</h3>
+              <ul class="plans-container-content-wrapper1-box-list">
+                <li class="plans-container-content-wrapper1-box-list-item">Suporte 24h</li>
+                <li class="plans-container-content-wrapper1-box-list-item">Serviços de quarto</li>
+                <li class="plans-container-content-wrapper1-box-list-item">Guia turístico</li>
+                <li class="plans-container-content-wrapper1-box-list-item">Roteiro de trilhas</li>
+                <li class="plans-container-content-wrapper1-box-list-item">Serviços personalizado</li>
+                <li class="plans-container-content-wrapper1-box-list-item">Área Vip</li>
+              </ul>
+              <div class="know-more-button">
+                <button type="button">Saiba mais!</button>
+              </div>
+            </div>
+          </div>
+        </article>
+      </section>
+
+      <footer class="footer-container">
+        <div class="container-center footer-container-content">
+          <p class="footer-container-content-text">&copy; 2021 CSS Flex Box</p>
+          <div class="footer-container-content-wrapper1">
+            <p class="footer-container-content-text">
+              Layout: <strong>Karen Santos</strong> <small class="text-small">(Digital Innovation)</small>
+            </p>
+            <p class="footer-container-content-text">Desenvolvedor: <strong>Jonathan Lopes</strong></p>
+          </div>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
