adjusted tags header/main html

--- a/projeto/index.html
+++ b/projeto/index.html
@@ -12,22 +12,22 @@
     <title>Projeto - display flex</title>
   </head>
   <body>
-    <main class="container">
-      <header class="header-site-container">
-        <div class="container-center header-site-container-content">
-          <span class="logo">FlexTurismos</span>
-          <div class="menu">
-            <nav class="menu-navigation">
-              <ul class="menu-list">
-                <li><a href="#">Quem somos</a></li>
-                <li><a href="#">Serviços</a></li>
-                <li><a href="#">Planos</a></li>
-              </ul>
-            </nav>
-          </div>
+    <header class="header-site-container">
+      <div class="container-center header-site-container-content">
+        <span class="logo">FlexTurismos</span>
+        <div class="menu">
+          <nav class="menu-navigation">
+            <ul class="menu-list">
+              <li><a href="#">Quem somos</a></li>
+              <li><a href="#">Serviços</a></li>
+              <li><a href="#">Planos</a></li>
+            </ul>
+          </nav>
         </div>
-      </header>
+      </div>
+    </header>
 
+    <main class="container">
       <section class="service-container">
         <article class="container-center service-container-content">
           <div class="service-container-content-wrapper1">
@@ -142,9 +142,7 @@
         <div class="container-center footer-container-content">
           <p class="footer-container-content-text">&copy; 2021 CSS Flex Box</p>
           <div class="footer-container-content-wrapper1">
-            <p class="footer-container-content-text">
-              Layout: <strong>Karen Santos</strong> <small class="text-small">(Digital Innovation)</small>
-            </p>
+            <p class="footer-container-content-text">Layout: <strong>Karen Santos</strong> <small class="text-small">(Digital Innovation)</small></p>
             <p class="footer-container-content-text">Desenvolvedor: <strong>Jonathan Lopes</strong></p>
           </div>
         </div>
